--- a/Knit/Views/Base.lproj/Main.storyboard
+++ b/Knit/Views/Base.lproj/Main.storyboard
@@ -86,7 +86,7 @@
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Knit" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hse-IZ-ReS">
-                                    <rect key="frame" x="15" y="15" width="104.5" height="44"/>
+                                    <rect key="frame" x="15" y="13" width="104.5" height="44"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="104.5" id="FgI-p3-uwM"/>
                                     </constraints>
@@ -95,13 +95,13 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10 Friends Found" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E7D-RH-VjM">
-                                    <rect key="frame" x="372" y="24.5" width="185" height="24"/>
+                                    <rect key="frame" x="372" y="22.5" width="185" height="24"/>
                                     <fontDescription key="fontDescription" name="ProximaNova-Semibold" family="Proxima Nova" pointSize="24"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cAT-cK-wyE">
-                                    <rect key="frame" x="568" y="32" width="10" height="10"/>
+                                    <rect key="frame" x="568" y="30" width="10" height="10"/>
                                     <color key="backgroundColor" red="0.21067416667938232" green="0.92213642597198486" blue="0.23415806889533997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="10" id="5zb-uX-e0g"/>
@@ -116,7 +116,7 @@
                             </subviews>
                             <color key="backgroundColor" red="0.29768484830856323" green="0.68788403272628784" blue="0.31118106842041016" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
-                                <constraint firstItem="hse-IZ-ReS" firstAttribute="centerY" secondItem="vBl-Ki-akz" secondAttribute="centerY" constant="5" id="1L7-Ae-thf"/>
+                                <constraint firstItem="hse-IZ-ReS" firstAttribute="centerY" secondItem="vBl-Ki-akz" secondAttribute="centerY" constant="3" id="1L7-Ae-thf"/>
                                 <constraint firstItem="cAT-cK-wyE" firstAttribute="centerY" secondItem="E7D-RH-VjM" secondAttribute="centerY" id="3Yd-ry-zEk"/>
                                 <constraint firstItem="hse-IZ-ReS" firstAttribute="centerY" secondItem="E7D-RH-VjM" secondAttribute="centerY" id="Kwb-qi-rJ8"/>
                                 <constraint firstItem="cAT-cK-wyE" firstAttribute="leading" secondItem="E7D-RH-VjM" secondAttribute="trailing" constant="11" id="PNF-yu-h0i"/>
@@ -219,7 +219,7 @@
                         </connections>
                     </tableView>
                     <connections>
-                        <outlet property="tableHeaderView" destination="vBl-Ki-akz" id="xS9-dz-lvp"/>
+                        <outlet property="tableHeaderView" destination="vBl-Ki-akz" id="zOY-8d-KLd"/>
                         <segue destination="NJJ-cz-8lS" kind="presentation" identifier="segueToMessages" id="NmA-b5-uIf"/>
                     </connections>
                 </tableViewController>
